@@ -1,6 +1,6 @@
 /* 
-  DccNiTghtmare: a satiric post-apocalyptical RPG.
-  Copyright (C) 2005-2009 DNTeam <dnt@dnteam.org>
+  DccNiTghtmare: a satirical post-apocalyptical RPG.
+  Copyright (C) 2005-2010 DNTeam <dnt@dnteam.org>
  
   This file is part of DccNiTghtmare.
  
@@ -133,6 +133,23 @@ character* fightGroup::getNearestEnemy(character* pers)
       }
    }
    return(enemy);
+}
+
+/***************************************************************
+ *                      isAnyoneIsAlive                        *
+ ***************************************************************/
+bool fightGroup::isAnyoneAlive()
+{
+   int i;
+   for(i=0;i<actualCharacters;i++)
+   {
+      /* Verify status */
+      if(characters[i]->isAlive())
+      {
+         return(true);
+      }
+   }
+   return(false);
 }
 
 /***************************************************************
