@@ -7,6 +7,7 @@
 - Optimized text render code;
 - Lowered delay times for battles;
 - Applying skill and attribute modifier to damage and heal points;
+- Fixed a possible hang up when character dies;
 
 ================================================
 |                Version 0.5                   |
